--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="We can replace this description meta with anything we want!">
+  <meta name="description" content="Improve your foreign language skills by chatting with native speakers your age.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MVP Messaging!</title>
 
@@ -26,7 +26,7 @@
   <link rel="manifest" href="manifest.json">
 
   <!-- Add to homescreen for Chrome on Android -->
-  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">s
   <meta name="application-name" content="World Without Walls">
   <meta name="theme-color" content="#303F9F">
 
