--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Improve your foreign language skills by chatting with native speakers your age.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MVP Messaging!</title>
+  <title>World Without Walls</title>
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
