--- a/index.html
+++ b/index.html
@@ -50,13 +50,38 @@
   <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
+
+<div class="Chatbox">
+<div class="chatlogs">
+
+<div class="chat">
+<div class="user-photo"></div>
+<p class="chat-message">Hello</p>
+</div>
+<div class="chat">
+<div class="user-photo"></div>
+<p class="chat-message">Whats up</p>
+</div>
+
+<div class="chat-form">
+<textarea></textarea>
+<button>Send</button>
+</div>
+
+
+
+
+
+
+
+
+
+
 <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
   <!-- Header section containing logo -->
   <header class="mdl-layout__header mdl-color-text--white mdl-color--light-blue-700">
     <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
-      <div class="mdl-layout__header-row mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
-        <h3><i class="material-icons">chat_bubble_outline</i> World Without Walls</h3>
       </div>
       <div id="user-container">
         <div hidden id="user-pic"></div>
@@ -65,6 +90,8 @@
           Sign-out
         </button>
         <button hidden id="sign-in" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--white">
+      <div class="mdl-layout__header-row mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
+        <h3><i class="material-icons">chat_bubble_outline</i> World Without Walls</h3>
           <i class="material-icons">account_circle</i>Sign-in with Google
         </button>
       </div>
