Add really ugly but functioning login screen and dashboard. The dashboard has 3 hardcoded conversation links.

--- a/login.html
+++ b/login.html
@@ -56,7 +56,8 @@
   </header>
 
   <main class="mdl-layout__content mdl-color--grey-100">
-    
+    <h1>Welcome to the Ghetto Login!</h1>
+    <h3>You sorta just gotta press the sign-in button ^^^^</h3>
   </main>
 </div>
 
