--- a/dashboard.html
+++ b/dashboard.html
@@ -62,6 +62,11 @@
 
   <main class="mdl-layout__content mdl-color--grey-100">
     It's the Dashboard!!!!!!
+    <p>Click <a href="conversation.html?targetUID=miTtPwEyWBcfuLcauRuMhzyiqjQ2">here</a> to talk to Ryan! (rkanderson15@gmail.com)<p>
+
+    <p>Click <a href="conversation.html?targetUID=lsPwIYYJAiVPGInFluSjwCVl9IF3">here</a> to talk to Kha! (kha.vng@gmail.com)<p>
+
+    <p>Click <a href="conversation.html?targetUID=hJeeOKl9hxbDtk899kV8qa1phB22">here</a> to talk to SHS App Dev! (shsappdev17@gmail.com)<p>
   </main>
 </div>
 
