--- a/dashboard.html
+++ b/dashboard.html
@@ -61,12 +61,14 @@
   </header>
 
   <main class="mdl-layout__content mdl-color--grey-100">
-    It's the Dashboard!!!!!!
+    It's the Dashboard!!!!! No conversations are kept by users yet, but here are some hardcoded ones!
+    <!--Here I hardcoded some conversation links (link to conversation.html and passing in a user ID, which are also hardcoded)-->
     <p>Click <a href="conversation.html?targetUID=miTtPwEyWBcfuLcauRuMhzyiqjQ2">here</a> to talk to Ryan! (rkanderson15@gmail.com)<p>
 
     <p>Click <a href="conversation.html?targetUID=lsPwIYYJAiVPGInFluSjwCVl9IF3">here</a> to talk to Kha! (kha.vng@gmail.com)<p>
 
     <p>Click <a href="conversation.html?targetUID=hJeeOKl9hxbDtk899kV8qa1phB22">here</a> to talk to SHS App Dev! (shsappdev17@gmail.com)<p>
+
   </main>
 </div>
 
