--- a/index.html
+++ b/index.html
@@ -1,95 +1,102 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Improve your foreign language skills by chatting with native speakers your age.">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>World Without Walls</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Improve your foreign language skills by chatting with native speakers your age.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>World Without Walls</title>
 
-  <!-- Disable tap highlight on IE -->
-  <meta name="msapplication-tap-highlight" content="no">
+    <!-- Disable tap highlight on IE -->
+    <meta name="msapplication-tap-highlight" content="no">
 
-  <!-- Web Application Manifest -->
-  <link rel="manifest" href="manifest.json">
+    <!-- Web Application Manifest -->
+    <link rel="manifest" href="manifest.json">
+    <!-- Add to homescreen for Chrome on Android -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="World Without Walls">
+    <meta name="theme-color" content="#303F9F">
 
-  <!-- Add to homescreen for Chrome on Android -->
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="application-name" content="World Without Walls">
-  <meta name="theme-color" content="#303F9F">
+    <!-- Add to homescreen for Safari on iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="World Without Walls">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#303F9F">
 
-  <!-- Add to homescreen for Safari on iOS -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-title" content="World Without Walls">
-  <meta name="apple-mobile-web-app-status-bar-style" content="#303F9F">
+    <!-- Tile icon for Win8 -->
+    <meta name="msapplication-TileColor" content="#3372DF">
+    <meta name="msapplication-navbutton-color" content="#303F9F">
 
-  <!-- Tile icon for Win8 -->
-  <meta name="msapplication-TileColor" content="#3372DF">
-  <meta name="msapplication-navbutton-color" content="#303F9F">
+    <!-- Compiled and minified CSS -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+    <link rel="stylesheet" href="styles/main.css" </head>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
 
-  <!-- Material Design Lite -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.orange-indigo.min.css">
-  <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
-
-  <!-- App Styling -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
-  <link rel="stylesheet" href="styles/main.css">
 </head>
+
 <body>
-<div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
+  <!-- Navbar  -->
+    <ul id="user-dropdown" class="dropdown-content">
+        <li>
+            <a id="sign-out">
+  Sign-out</a>
+        </li>
+    </ul>
+    <nav>
+        <div class="nav-wrapper teal" id="nav-bar">
+            <a href="#" class="brand-logo"><i class="large material-icons">textsms</i>World Without Walls</a>
+            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li>
+                    <a class="dropdown-button" href="#!" data-activates="user-dropdown" id="user-pic"></a>
+                </li>
+            </ul>
+            <ul class="side-nav" id="mobile-demo">
+                <li>
+                    <a id="sign-out-mobile">Sign-out</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-  <!-- Header section containing logo -->
-  <header class="mdl-layout__header mdl-color-text--white mdl-color--light-blue-700">
-    <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
-      <div class="mdl-layout__header-row mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
-        <h3><i class="material-icons">chat_bubble_outline</i> World Without Walls</h3>
-      </div>
-      <div id="user-container">
-        <div hidden id="user-pic"></div>
-        <div hidden id="user-name"></div>
-        <button hidden id="sign-out" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--white">
-          Sign-out
-        </button>
-        <button hidden id="sign-in" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--white">
-          <i class="material-icons">account_circle</i>Sign-in with Google
-        </button>
-      </div>
+    <!-- Content -->
+
+    <div class="row">
+        <div id="sidebar" class="col s4 teal darken-3">
+            Sidebar
+            <div id="conversation-list"></div>
+            <!--Here I hardcoded some conversation links (link to conversation.html and passing in a user ID, which are also hardcoded)-->
+            <p>Click <a href="conversation.html?targetUID=miTtPwEyWBcfuLcauRuMhzyiqjQ2">here</a> to talk to Ryan! (rkanderson15@gmail.com)<p>
+
+            <p>Click <a href="conversation.html?targetUID=lsPwIYYJAiVPGInFluSjwCVl9IF3">here</a> to talk to Kha! (kha.vng@gmail.com)<p>
+
+            <p>Click <a href="conversation.html?targetUID=hJeeOKl9hxbDtk899kV8qa1phB22">here</a> to talk to SHS App Dev! (shsappdev17@gmail.com)<p>
+            <p>Click <a href="add-conversation.html">here</a> to add a new conversation.</p>
+
+        </div>
+        <div id="chat" class="col s8 teal lighten-3">
+            Chat
+        </div>
     </div>
-  </header>
 
-  <main class="mdl-layout__content mdl-color--grey-100">
-    It's the Dashboard!!!!!
-    <!--Here I hardcoded some conversation links (link to conversation.html and passing in a user ID, which are also hardcoded)-->
-    <!-- <p>Click <a href="conversation.html?targetUID=miTtPwEyWBcfuLcauRuMhzyiqjQ2">here</a> to talk to Ryan! (rkanderson15@gmail.com)<p>
-
-    <p>Click <a href="conversation.html?targetUID=lsPwIYYJAiVPGInFluSjwCVl9IF3">here</a> to talk to Kha! (kha.vng@gmail.com)<p>
-
-    <p>Click <a href="conversation.html?targetUID=hJeeOKl9hxbDtk899kV8qa1phB22">here</a> to talk to SHS App Dev! (shsappdev17@gmail.com)<p> -->
-
-    <div id="conversation-list"></div>
-
-    <p>Click <a href="add-conversation.html">here</a> to add a new conversation.</p>
-
-
-  </main>
-</div>
-
-<!-- Firebase -->
-<script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
-<script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyCx-2_5IcfXswoDZhjle1rPS3m-ryi3rpM",
-    authDomain: "penpalapp-6020c.firebaseapp.com",
-    databaseURL: "https://penpalapp-6020c.firebaseio.com",
-    storageBucket: "penpalapp-6020c.appspot.com",
-    messagingSenderId: "322094641122"
-  };
-  firebase.initializeApp(config);
-</script>
-<script src="scripts/dashboard.js"></script>
+    <!-- Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
+    <script>
+        // Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyCx-2_5IcfXswoDZhjle1rPS3m-ryi3rpM",
+            authDomain: "penpalapp-6020c.firebaseapp.com",
+            databaseURL: "https://penpalapp-6020c.firebaseio.com",
+            storageBucket: "penpalapp-6020c.appspot.com",
+            messagingSenderId: "322094641122"
+        };
+        firebase.initializeApp(config);
+    </script>
+    <script src="scripts/dashboard.js"></script>
 </body>
 </html>
