Add conversation-list loading. Again. Now with the new UI.

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
             <p class="white-text">Conversations<p>
             <div id="conversation-list" class="collection">
             <!--Here I hardcoded some conversation links (link to conversation.html and passing in a user ID, which are also hardcoded)-->
-            <a href="conversation.html?targetUID=miTtPwEyWBcfuLcauRuMhzyiqjQ2" class="collection-item"><span class="new badge">4</span>Ryan Anderson</a>
+            <!-- <a href="conversation.html?targetUID=miTtPwEyWBcfuLcauRuMhzyiqjQ2" class="collection-item"><span class="new badge">4</span>Ryan Anderson</a>
             <a href="conversation.html?targetUID=lsPwIYYJAiVPGInFluSjwCVl9IF3" class="collection-item"><span class="new badge">2</span>Kha Nguyen</a>
-            <a href="conversation.html?targetUID=hJeeOKl9hxbDtk899kV8qa1phB22" class="collection-item">SHS App Dev</a>
+            <a href="conversation.html?targetUID=hJeeOKl9hxbDtk899kV8qa1phB22" class="collection-item">SHS App Dev</a> -->
             <a href="add-conversation.html" class="collection-item">New Conversation</a>
 
           </div>
