--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <nav>
         <div class="nav-wrapper teal" id="nav-bar">
             <a href="#" class="brand-logo"><i class="large material-icons">textsms</i>World Without Walls</a>
-            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+            <a href="#" data-activates="mobile-demo" class="button-collapse" id="button-collapse"><i class="material-icons">menu</i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li>
                     <a class="dropdown-button" href="#!" data-activates="user-dropdown" id="user-pic"></a>
