Changed About and Founders Page

--- a/styles/founderspage.html
+++ b/styles/founderspage.html
@@ -1,12 +1,9 @@
 <!doctype.html>
-
 <html>
 
-<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
-
 <head>
+<title>The Founders Page</title>
 
-<title>About Page</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <meta charset="utf-8">
 <meta name="viewport"
@@ -56,23 +53,15 @@ img{
 	height: auto;
 }
 
-
 </style>
 
 </head>
 
 <body>
 
- <!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
-
-   <!--Import jQuery before materialize.js-->
-      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      <script type="text/javascript" src="js/materialize.min.js"></script>
-
-  <nav>
+<nav>
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo center">About Page</a>
+      <a href="#" class="brand-logo center">The Founders Page</a>
       <ul id="nav-mobile" class="left hide-on-med-and-down">
       </ul>
     </div>
@@ -87,22 +76,21 @@ document.getElementById("demo").innerHTML = d.tostring();
 Click on me to display Date and Time</button>
 
 
-   
- <!-- Page Content goes here  -->         
+
+<h5><center>The Founders of World Without Walls Messaging Website.</center></h5>
+        
 <div class="container">
+<ul class="collection with-header"><br>
+<li class="collection-item">Ryan Anderson</li><br>
+<li class="collection-item">Kha Ngyuen</li><br>
+<li class="collection-item">Kyle Seid Phan</li>
+</ul> 
 
-<p style="text-align:left;" class="flow-text">Website Topic Summary:</p>
-  <ol style="text-align:left;" class="flow-text">
-    <li>Description</li><br>
-    <li>Description</li><br>
-    <li>Description</li><br>
-  </ol>
+<p> Description of Ryan here</p>
 
+<p> Description of Kha here</p>
 
-<h3><center>About</center></h3>
-
-<p style="text-align:left;" class="flow-text">World Without Walls will be a service that upgrades the old pen pal concept with instant messaging that young people are used to today in the form of an online chat app. Especially in the case of foreign language education, this is fantastic because it allows students to improve their language skills while having fun by conversing with native speakers their age. Certain tools will also be implemented that make this type of communication easier such as the ability to translate just an individual word or phrase, grammar checks, and speech to text.</p>
-</div>
+<p> Description of Kyle here</p>
 
 <!--
 <div class="pagination pagination-lg">
@@ -117,7 +105,7 @@ Click on me to display Date and Time</button>
 
 </body>
 
-        <footer class="page-footer">
+<footer class="page-footer">
           <div class="container">
             <div class="row">
               <div class="col l6 s12">
@@ -128,17 +116,18 @@ Click on me to display Date and Time</button>
                 <h5 class="white-text">Links</h5>
                 <ul>
                   <li><a class="grey-text text-lighten-3" href="http://www.worldwithoutwalls.tk">World Without Walls Messaging</a></li>
-                   <li><a class="grey-text text-lighten-3" href="file:///C:/Users/Kyle/Desktop/penpal-app-web/styles/founderspage.html">The Founders Page</a></li>
+                 <li><a class="grey-text text-lighten-3" href="file:///C:/Users/Kyle/Desktop/penpal-app-web/styles/aboutpage.html#!">About Page</a></li>
                 </ul>
               </div>
             </div>
           </div>
           <div class="footer-copyright">
             <div class="container">© 2017 Copyright Text
-            
             </div>
           </div>
         </footer>
+
+
 </html>
 
 
