Add sign-in and sign-out button binding scripts. This is the first in my attempt to modulize the javascript by function instead of by page.

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
           Conversations
             <div id="conversation-list" class="collection">
                 <!--Here I hardcoded some conversation links (link to conversation.html and passing in a user ID, which are also hardcoded)-->
-                <a href="index.html?targetUID=miTtPwEyWBcfuLcauRuMhzyiqjQ2" class="collection-item" onclick="function()"><span class="new badge">4</span>Ryan Anderson</a>
+                <!-- <a href="index.html?targetUID=miTtPwEyWBcfuLcauRuMhzyiqjQ2" class="collection-item" onclick="function()"><span class="new badge">4</span>Ryan Anderson</a>
                 <a href="index.html?targetUID=lsPwIYYJAiVPGInFluSjwCVl9IF3" class="collection-item"><span class="new badge">2</span>Kha Nguyen</a>
-                <a href="index.html?targetUID=hJeeOKl9hxbDtk899kV8qa1phB22" class="collection-item">SHS App Dev</a>
+                <a href="index.html?targetUID=hJeeOKl9hxbDtk899kV8qa1phB22" class="collection-item">SHS App Dev</a> -->
                 <a href="add-conversation.html" class="collection-item">New Conversation</a>
             </div>
           </div>
@@ -103,7 +103,7 @@
         firebase.initializeApp(config);
     </script>
     <script src="scripts/dashboard.js"></script>
-    <script src="scripts/conversation.js"></script>
+    <!-- <script src="scripts/conversation.js"></script> -->
 
 </body>
 
