--- a/login.html
+++ b/login.html
@@ -62,6 +62,6 @@
   };
   firebase.initializeApp(config);
 </script>
-<script src="scripts/login.js"></script>
+<script src="scripts/bind-signin-button.js"></script>
 </body>
 </html>
