--- a/index.html
+++ b/index.html
@@ -102,7 +102,10 @@
         };
         firebase.initializeApp(config);
     </script>
-    <script src="scripts/dashboard.js"></script>
+    <script src="scripts/bind-signout-button.js" buttonID="sign-out"></script>
+    <script src="scripts/bind-signout-button.js" buttonID="sign-out-mobile"></script>
+    <script src="scripts/load-conversation-list.js" conversationListID="conversation-list"></script>
+    <!-- <script src="scripts/dashboard.js"></script> -->
     <!-- <script src="scripts/conversation.js"></script> -->
 
 </body>
