--- a/index.html
+++ b/index.html
@@ -102,10 +102,13 @@
         };
         firebase.initializeApp(config);
     </script>
+    // The main page script
+    <script src="scripts/pages/dashboard.js"></script>
+
+    // Modules that add specific functionality.
     <script src="scripts/bind-signout-button.js" buttonID="sign-out"></script>
     <script src="scripts/bind-signout-button.js" buttonID="sign-out-mobile"></script>
     <script src="scripts/load-conversation-list.js" conversationListID="conversation-list"></script>
-    <!-- <script src="scripts/dashboard.js"></script> -->
     <!-- <script src="scripts/conversation.js"></script> -->
 
 </body>
