Hide message list and input and replace with message saying no conversations yet if no uid is provided in the url.

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                     Send
                   </button>
                 </form>
+                <p id="nothing-to-display" hidden>No conversation to display. Yet...</p>
             </div>
         </div>
     </div>
