Fixed up and added link to founder page

--- a/founderspage.html
+++ b/founderspage.html
@@ -10,10 +10,10 @@
 content="width=device=width,initial-scale=1">
 <link rel="stylesheet"
 href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<script 
-src="https://ajax.googleleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> 
-<script 
-src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrapap.min.js"></script> 
+<script
+src="https://ajax.googleleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script
+src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrapap.min.js"></script>
 
 <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
@@ -78,13 +78,13 @@ Click on me to display Date and Time</button>
 
 
 <h5><center>The Founders of World Without Walls Messaging Website.</center></h5>
-        
+
 <div class="container">
 <ul class="collection with-header"><br>
 <li class="collection-item">Ryan Anderson</li><br>
 <li class="collection-item">Kha Ngyuen</li><br>
 <li class="collection-item">Kyle Seid Phan</li>
-</ul> 
+</ul>
 
 <p> Description of Ryan here</p>
 
@@ -116,7 +116,7 @@ Click on me to display Date and Time</button>
                 <h5 class="white-text">Links</h5>
                 <ul>
                   <li><a class="grey-text text-lighten-3" href="http://www.worldwithoutwalls.tk">World Without Walls Messaging</a></li>
-                 <li><a class="grey-text text-lighten-3" href="file:///C:/Users/Kyle/Desktop/penpal-app-web/styles/aboutpage.html#!">About Page</a></li>
+                 <li><a class="grey-text text-lighten-3" href="aboutpage.html">About Page</a></li>
                 </ul>
               </div>
             </div>
@@ -129,5 +129,3 @@ Click on me to display Date and Time</button>
 
 
 </html>
-
-
