Fixed About and Founder Page

--- a/founderspage.html
+++ b/founderspage.html
@@ -28,13 +28,6 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrapap.min.js"></sc
 
 <style>
 
-.chat{
-	float: left;
-	margin: 5px;
-	padding: 15px;
-	max-width: 100%;
-	height: 100%;
-}
 body{
 	background-color:white;
 }
@@ -90,7 +83,7 @@ Click on me to display Date and Time</button>
 
 <p> Description of Kha here</p>
 
-<p> Description of Kyle here</p>
+<p> Description of Kyle here</p><br><br>
 
 <!--
 <div class="pagination pagination-lg">
