--- a/login.html
+++ b/login.html
@@ -9,6 +9,8 @@
     <meta name="description" content="Improve your foreign language skills by chatting with native speakers your age.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Without Walls</title>
+    <link rel="stylesheet" type="text/css" href="styles/login.css">
+
 
     <!-- Disable tap highlight on IE -->
     <meta name="msapplication-tap-highlight" content="no">
@@ -33,8 +35,6 @@
     <!-- Compiled and minified CSS -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
-    <link rel="stylesheet" href="styles/main.css" </head>
-    <link rel="stylesheet" href="styles/login.css" </head>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified JavaScript -->
