--- a/login.html
+++ b/login.html
@@ -62,6 +62,7 @@
   };
   firebase.initializeApp(config);
 </script>
+<script src="scripts/pages/login.js"></script>
 <script src="scripts/bind-signin-button.js" buttonID='sign-in'></script>
 </body>
 </html>
