--- a/index.html
+++ b/index.html
@@ -85,44 +85,49 @@
             </div>
         </div>
         <div id="chat-container" class="col s12 m10 l10">
-          Chat
-          <div id="chat" class="card z-depth-3">
-            <div id="messages">
-                <span id="message-filler"></span>
-            </div>
-            <form id="message-form" action="#">
-                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                    <input class="mdl-textfield__input" type="text" id="message">
-                    <label class="mdl-textfield__label" for="message">Message...</label>
+            Chat
+            <div id="chat" class="card z-depth-3">
+                <div id="messages">
+                    <span id="message-filler"></span>
                 </div>
-            </form>
-            <button id="submit" disabled type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">Send</button>
-
-
-            <p id="nothing-to-display" hidden>No conversation to display. Yet...</p>
+                <form id="message-form" action="#">
+                    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                        <input class="mdl-textfield__input" type="text" id="message">
+                        <label class="mdl-textfield__label" for="message">Message...</label>
+                    </div>
+                </form>
+                <button id="submit" disabled type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">Send</button>
+                <div class="row">
+                    <div class="col s9 m3 l3">
+                        <div class="card-panel teal" hidden id="nothing-to-display">
+                            <!-- <span class="white-text center-align">No conversation loaded.</span> -->
+                            <p class="white-text center-align">No conversation loaded</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    <!-- Firebase -->
-    <script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
-    <script>
-        // Initialize Firebase
-        var config = {
-            apiKey: "AIzaSyCx-2_5IcfXswoDZhjle1rPS3m-ryi3rpM",
-            authDomain: "penpalapp-6020c.firebaseapp.com",
-            databaseURL: "https://penpalapp-6020c.firebaseio.com",
-            storageBucket: "penpalapp-6020c.appspot.com",
-            messagingSenderId: "322094641122"
-        };
-        firebase.initializeApp(config);
-    </script>
-    <!-- The main page script -->
-    <script src="scripts/pages/dashboard.js"></script>
+        <!-- Firebase -->
+        <script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
+        <script>
+            // Initialize Firebase
+            var config = {
+                apiKey: "AIzaSyCx-2_5IcfXswoDZhjle1rPS3m-ryi3rpM",
+                authDomain: "penpalapp-6020c.firebaseapp.com",
+                databaseURL: "https://penpalapp-6020c.firebaseio.com",
+                storageBucket: "penpalapp-6020c.appspot.com",
+                messagingSenderId: "322094641122"
+            };
+            firebase.initializeApp(config);
+        </script>
+        <!-- The main page script -->
+        <script src="scripts/pages/dashboard.js"></script>
 
-    <!-- Modules that add specific functionality. -->
-    <script src="scripts/bind-signout-button.js" buttonID="sign-out"></script>
-    <script src="scripts/bind-signout-button.js" buttonID="sign-out-mobile"></script>
-    <script src="scripts/load-conversation-list.js" conversationListID="conversation-list"></script>
-    <script src="scripts/bind-messages.js"></script>
+        <!-- Modules that add specific functionality. -->
+        <script src="scripts/bind-signout-button.js" buttonID="sign-out"></script>
+        <script src="scripts/bind-signout-button.js" buttonID="sign-out-mobile"></script>
+        <script src="scripts/load-conversation-list.js" conversationListID="conversation-list"></script>
+        <script src="scripts/bind-messages.js"></script>
 
 </body>
 
