--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <!-- <a href="index.html?targetUID=miTtPwEyWBcfuLcauRuMhzyiqjQ2" class="collection-item" onclick="function()"><span class="new badge">4</span>Ryan Anderson</a>
                 <a href="index.html?targetUID=lsPwIYYJAiVPGInFluSjwCVl9IF3" class="collection-item"><span class="new badge">2</span>Kha Nguyen</a>
                 <a href="index.html?targetUID=hJeeOKl9hxbDtk899kV8qa1phB22" class="collection-item">SHS App Dev</a> -->
-                <a href="add-conversation.html" class="collection-item">New Conversation</a>
+                <!-- <a href="add-conversation.html" class="collection-item">New Conversation</a> -->
             </div>
         </div>
         <div id="chat-container" class="col s12 m10 l10">
@@ -90,26 +90,47 @@
                 <div id="messages">
                     <span id="message-filler"></span>
                 </div>
+                <div class="row">
+                    <div class="col s9 m3 l3">
+                        <div class="card-panel teal" hidden id="nothing-to-display">
+                            <p class="white-text center-align">No conversation loaded</p>
+                        </div>
+                    </div>
+                </div>
                 <div id="message-interaction">
                     <form id="message-form" action="#">
-                        <div class="input-field inline">
+                        <div class="input-field inline" id="message-input">
                             <input type="text" id="message">
                             <label for="message">Message...</label>
                         </div>
+                        <button id="submit" disabled type="submit" class="btn waves-light waves-effect red lighten-1">Send
+                          <i class="material-icons right">send</i>
+                        </button>
                     </form>
-                    <button id="submit" disabled type="submit" class="btn waves-light waves-effect red lighten-1">Send</button>
-                    <div class="row">
-                        <div class="col s9 m3 l3">
-                            <div class="card-panel teal" hidden id="nothing-to-display">
-                                <!-- <span class="white-text center-align">No conversation loaded.</span> -->
-                                <p class="white-text center-align">No conversation loaded</p>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
 
+        <!-- Floating Action Button  -->
+        <div class="fixed-action-btn">
+
+            <a class="btn-floating btn-large waves-effect waves-light red lighten-1" href="#add-conversation"><i class="material-icons">add</i></a>
+        </div>
+        <!-- Add Conversation Modal -->
+        <div id="add-conversation" class="modal teal">
+            <div class="modal-content white-text">
+                <h4>Add a conversation.</h4>
+                <div class="input-field inline">
+                    <input id="email-field" type="email" class="validate">
+                    <label for="email-field" data-error="wrong" data-success="right">Email</label>
+                </div>
+                <button id="add-conversation-button" class="red lighten-1 btn waves-effect waves-light">Add Conversation</button>
+            </div>
+            <div class="modal-footer teal white-text">
+                <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Done</a>
+            </div>
+        </div>
+    </div>
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
     <script>
@@ -122,7 +143,6 @@
             messagingSenderId: "322094641122"
         };
         firebase.initializeApp(config);
-
     </script>
     <!-- The main page script -->
     <script src="scripts/pages/dashboard.js"></script>
@@ -132,6 +152,14 @@
     <script src="scripts/bind-signout-button.js" buttonID="sign-out-mobile"></script>
     <script src="scripts/bind-conversation-list.js" conversationListID="conversation-list"></script>
     <script src="scripts/bind-messages.js"></script>
+    <script src="scripts/pages/add-conversation.js"></script>
+
+    <script>
+        $(document).ready(function() {
+            // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
+            $('.modal').modal();
+        });
+    </script>
 
 
 </body>
