Add conversation model color change

--- a/index.html
+++ b/index.html
@@ -117,16 +117,16 @@
             <a class="btn-floating btn-large waves-effect waves-light red lighten-1" href="#add-conversation"><i class="material-icons">add</i></a>
         </div>
         <!-- Add Conversation Modal -->
-        <div id="add-conversation" class="modal teal">
-            <div class="modal-content white-text">
+        <div id="add-conversation" class="modal">
+            <div class="modal-content">
                 <h4>Add a conversation.</h4>
                 <div class="input-field inline">
                     <input id="email-field" type="email" class="validate">
                     <label for="email-field" data-error="wrong" data-success="right">Email</label>
                 </div>
-                <button id="add-conversation-button" class="red lighten-1 btn waves-effect waves-light">Add Conversation</button>
+                <button id="add-conversation-button" class="teal btn waves-effect waves-light">Add Conversation</button>
             </div>
-            <div class="modal-footer teal white-text">
+            <div class="modal-footer">
                 <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Done</a>
             </div>
         </div>
@@ -148,9 +148,9 @@
     <script src="scripts/pages/dashboard.js"></script>
 
     <!-- Modules that add specific functionality. -->
-    <script src="scripts/bind-signout-button.js" buttonID="sign-out"></script>
-    <script src="scripts/bind-signout-button.js" buttonID="sign-out-mobile"></script>
-    <script src="scripts/bind-conversation-list.js" conversationListID="conversation-list"></script>
+    <script src="scripts/bind-signout-button.js" buttonid="sign-out"></script>
+    <script src="scripts/bind-signout-button.js" buttonid="sign-out-mobile"></script>
+    <script src="scripts/bind-conversation-list.js" conversationlistid="conversation-list"></script>
     <script src="scripts/bind-messages.js"></script>
     <script src="scripts/pages/add-conversation.js"></script>
 
